# airflow-hosted-on-aca

./: .env.example  .gitignore  Dockerfile  README.md  azure.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: aca_jobs_pipeline_dag.py
airflow/plugins/operators/: __init__.py
infra/: main.bicep  main.parameters.json
scripts/: upload-dags.ps1  upload-dags.sh
