[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-hosted-on-aca"
version = "0.1.0"
description = "Self-contained template that hosts Apache Airflow on Azure Container Apps and drives Azure Container Apps Jobs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Hetvi Patel" }]
keywords = ["airflow", "azure", "container-apps", "aca", "jobs", "orchestration", "azd"]
dependencies = [
    "apache-airflow>=2.8.0",
    "azure-identity>=1.16.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/hetvip2/airflow-hosted-on-aca"
Repository = "https://github.com/hetvip2/airflow-hosted-on-aca"

# The reusable artifact is the Airflow plugins folder (operator + trigger).
# Mapping it here means `pip install .` exposes the same `operators` /
# `triggers` modules the DAGs import.
[tool.setuptools]
package-dir = { "" = "airflow/plugins" }

[tool.setuptools.packages.find]
where = ["airflow/plugins"]
include = ["operators*", "triggers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["airflow/plugins"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
